<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:weightSum="2"
    >

    <EditText
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/shopping_list_item_name"
        android:hint="@string/shopping_list_item_name"
        android:inputType="textPersonName"
        android:text="@string/shopping_list_item_name" />

    <EditText
        android:id="@+id/item_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/item_cost"
        android:inputType="textCapCharacters|numberDecimal" />

    <CheckBox
        android:id="@+id/item_is_bought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/deleteItemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_baseline_delete_24px"
        android:text="Button" />

</LinearLayout>