...
        android:layout_height="0dp"
        android:layout_weight="90"
        android:scrollbarStyle="insideInset"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shoppingList"
            android:layout_width="match_parent"
            android:layout_height ="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            />
...
            android:id="@+id/total_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="77"
            android:background="?attr/colorPrimary"
            android:text="@string/totalCost"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="sans" />

...
